--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <div class="carousel-inner ">
                     <div class="carousel-item active p-5 rounded-2"
-                        style="background-image:url(/images/cover/cover-1.png); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                        style="background-image:url(./images/cover/cover-1.png); background-position: center; background-repeat: no-repeat; background-size: cover;">
 
                         <h1 class="my-5 py-5 text-white text-center fs-1 fw-bold">Get Started Digital Learning</h1>
                         <p class="fs-4 mb-5 pb-5 text-white text-center">It is a long established fact that a reader
@@ -73,7 +73,7 @@
 
                     </div>
                     <div class="carousel-item active p-5 rounded-2"
-                        style="background-image:url(/images/cover/cover-3.jpg); background-position: center; background-repeat: no-repeat; background-size: cover;">
+                        style="background-image:url(./images/cover/cover-3.jpg); background-position: center; background-repeat: no-repeat; background-size: cover;">
 
                         <h1 class="my-5 py-5 text-white text-center fs-1 fw-bold">Get Started Digital Learning</h1>
                         <p class="fs-4 mb-5 pb-5 text-white text-center">It is a long established fact that a reader
