--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             </div>
             <div class="container">
                 <div class="row g-5">
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card d-lg-flex flex-lg-row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card d-lg-flex d-md-flex flex-md-row flex-lg-row">
                             <img class="img-fluid" src="./images/course/course-1.png" alt="">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
@@ -120,8 +120,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card d-lg-flex flex-lg-row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card d-lg-flex d-md-flex flex-md-row flex-lg-row">
                             <img class="img-fluid" src="./images/course/course-2.png" alt="">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
@@ -131,8 +131,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card d-lg-flex flex-lg-row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card d-lg-flex d-md-flex flex-md-row flex-lg-row">
                             <img class="img-fluid" src="./images/course/course-3.png" alt="">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Fullstack Web Development</h5>
@@ -142,8 +142,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card d-lg-flex flex-lg-row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card d-lg-flex d-md-flex flex-md-row flex-lg-row">
                             <img class="img-fluid" src="./images/course/course-4.png" alt="">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Digital Marketing</h5>
@@ -153,8 +153,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card d-lg-flex flex-lg-row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card d-lg-flex d-md-flex flex-md-row flex-lg-row">
                             <img class="img-fluid" src="./images/course/course-5.png" alt="">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Photography Basic Rules</h5>
@@ -164,8 +164,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="card d-lg-flex flex-lg-row">
+                    <div class="col-sm-12 col-md-12 col-lg-6">
+                        <div class="card d-lg-flex d-md-flex flex-md-row flex-lg-row">
                             <img class="img-fluid" src="./images/course/course-6.png" alt="">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Motion Graphics</h5>
